[package]
name = "dropctl"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas <nicolasalca@hotmail.com>"]
description = "Secure peer-to-peer file transfer"

[[bin]]
name = "dropctl"
path = "src/main.rs"

[lib]
name = "dropctl"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["net", "fs", "io-util", "rt-multi-thread", "sync", "macros", "time"] }

# Crypto
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
hostname = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.test]
incremental = false
